examples/test/testpolicy15646.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy15646
  namespace: namespace55
spec:
  podSelector:
    matchLabels:
      key22: value31
      key39: value5
      key31: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key10: value1
          key41: value6
      podSelector:
        matchLabels:
          key49: value7
          key11: value10
